// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Slab DefaultSlab renders 1`] = `
<Fragment>
  <h2
    id="default-slab"
  >
    Default slab
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab"
    >
      <p>
        Do you want to sign up for the slab mailing list?
      </p>
      <form
        action="#"
        data-validate={true}
        noValidate={true}
      >
        <div
          className="form-group"
        >
          <label
            htmlFor="validation-email-2"
          >
            Email
          </label>
          <div
            className="input-group"
          >
            <span
              className="input-group-addon"
            >
              <i
                className="material-icons"
              >
                email
              </i>
            </span>
            <input
              className="form-control"
              id="validation-email-2"
              placeholder="bob.corlsan@example.com"
              required={true}
              type="email"
            />
          </div>
          <div
            className="help-block"
            data-error="Wrong!"
            data-success="Right!"
          >
            This one might be a little tricky
          </div>
        </div>
        <button
          className="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabCombinations renders 1`] = `
<Fragment>
  <h2
    id="slab-combinations"
  >
    Slab combinations
  </h2>
  <p>
    You can mix and match slab variations as you see fit.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-white slab-muted slab-elevated"
    >
      This is an elevated white slab with muted text.
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-well slab-lg"
    >
      This is a big well!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabElevated renders 1`] = `
<Fragment>
  <h2
    id="elevated-slab"
  >
    Elevated slab
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-elevated"
    >
      Look ma, im elevated!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabMuted renders 1`] = `
<Fragment>
  <h2
    id="slab-muted"
  >
    Slab muted
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-muted"
    >
      <h4>
        This text will be gray.
      </h4>
      

      <span>
        And this text will be gray.
      </span>
      

      Even this text will be gray!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabSizes renders 1`] = `
<Fragment>
  <h2
    id="slab-sizes"
  >
    Slab sizes
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-sm"
    >
      This is very snug.
    </div>
  </ComponentPreview>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-lg"
    >
      This is so spacious I can hardly believe it!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabText renders 1`] = `
<div
  className="col-lg-10 doc-body"
>
  <ExperimentalComponentAlert />
  <p
    className="lead"
  >
    Slabs are container components, therefore it works with whatever you want to put in it.
  </p>
  <DefaultSlab />
  <SlabElevated />
  <SlabWell />
  <SlabWhite />
  <SlabMuted />
  <SlabSizes />
  <SlabCombinations />
</div>
`;

exports[`Components: Slab SlabWell renders 1`] = `
<Fragment>
  <h2
    id="slab-well"
  >
    Slab well
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-well"
    >
      Look ma, im in a well!
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab SlabWhite renders 1`] = `
<Fragment>
  <h2
    id="slab-white"
  >
    Slab white
  </h2>
  <p>
    This slab can contain so many things
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="slab slab-white"
    >
      <p
        className="lead text-center"
      >
        Here is some text and then a striped item list
      </p>
      <ul
        className="item-list item-list-striped"
      >
        <li>
          <span>
            4925*********004
          </span>
        </li>
        <li>
          

          <span>
            
			
            4925*********004
            
			
            <span
              className="badge badge-blue"
            >
              new
            </span>
            

          </span>
          

          <a
            href="https://developer.payex.com"
          >
            developer.payex.com
          </a>
          

        </li>
        <li>
          

          <span>
            4925*********004
          </span>
          

          <i
            className="material-icons"
          >
            star
          </i>
          

        </li>
        <li>
          

          <span>
            4925*********004
          </span>
          

          <span
            className="status status-success"
          >
            Active
          </span>
          

          <button
            className="btn btn-danger btn-xs"
            type="button"
          >
            <i
              className="material-icons"
            >
              delete
            </i>
          </button>
          

        </li>
      </ul>
      <p>
        Maybe include a steps component in this slab so you can track your progress!
      </p>
      <div
        className="steps"
      >
        <ol>
          <li
            className="steps-completed"
          >
            <div
              className="material-icons steps-icon"
            >
              check
            </div>
            Step one
            <div
              className="steps-sub-title"
            >
              24.12.17 12:10
            </div>
          </li>
          <li
            className="steps-ongoing steps-selected"
          >
            Step two
          </li>
          <li>
            Step three
          </li>
          <li>
            Step four
          </li>
        </ol>
        <div
          className="steps-responsive"
        >
          <div
            className="steps-responsive-text"
          >
            Step 3
          </div>
        </div>
      </div>
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Slab renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <SlabText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
